# mu3_code

./: .gitignore  CLAUDE.md  README.md  figures.just  justfile  pyproject.toml
scripts/: _globe_template.py  ar_histograms.py  area_distribution.py  benchmark_alpha_slerp_inverse.py  make_dodec_plot.py  make_globe_plot.py  make_primary_direction_plot.py  make_projection_compare_globe.py  make_res3_globe.py  make_ring1_atlas_globe.py  make_ring1_failing_globe.py  measure_polish_band.py  pentagon_face_table_sketch.py  plot_cells_in_deleted.py  plot_deleted_direction_obstacle.py  plot_failing_walk_res3.py  plot_intrapentagon_ring1.py  plot_pentagon_globe.py  plot_pentagon_lattice.py  plot_pentagon_lattice_pair.py  plot_pentagon_lattice_pair_general.py  plot_pentagon_lattice_stitched.py  plot_pentagon_neighborhood.py  plot_phantom_both_twins.py  plot_primary_direction_convention.py  plot_res3_phantom_failure.py  plot_ring1_failing_simple.py  plot_ring1_phantom_corner.py  plot_ring1_phantom_walk.py  plot_ring_k_globe.py  plot_stitch_distance_distortion.py  plot_stitch_twin_asymmetry.py  probe_alpha_gamma_ivea_sweep.py  probe_alpha_ivea_sweep.py  probe_alpha_slerp_aspect.py  probe_alpha_slerp_corner.py  probe_alpha_slerp_extended_sweep.py  probe_alpha_slerp_floor.py  probe_alpha_slerp_high_res_area_r.py  probe_alpha_slerp_pareto.py  (+5 more)
tests/: adversarial.py  conftest.py  test_cell.py  test_cocycle.py  test_edge.py  test_eisenstein.py  test_face_lattice.py  test_globe_tiling.py  test_icosahedron.py  test_incidence.py  test_index.py  test_island.py  test_neighbor.py  test_p6.py  (+8 more)
(+17 files in other folders)
